kubernetes/manifests/taskflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow
  namespace: taskflow
spec:
  selector:
    app: taskflow
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
